fonts changed. button added to play with prompts and localStorage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Display:wght@400;500;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen|Tangerine|Iconsolata|Droid+Sans|Roboto" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|Tangerine|Iconsolata|Droid+Sans|Roboto" rel="stylesheet" > -->
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Blue Dragonfly</title>
   </head>
@@ -27,6 +28,7 @@
       <li>Tara get's a concoction with mint liqueur as a Mojito</li>
     </ul>
     <a href="manifesto.html">Blue Dragon Manifesto</a>
+    <p><button>Change user</button></p>
     <script src="scripts/main.js"></script>
   </body>
 </html>
