added id for js access. js updated

--- a/manifesto.html
+++ b/manifesto.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Blue Dragonfly</h1>
     <h2>Manifesto</h2>
-    <h3>Dreams to reality can mean a lot of things. What does it mean to me?</h3>
+    <h3 id="myManifesto">Dreams to reality can mean a lot of things. What does it mean to me?</h3>
     <h4>Always ...</h4>
     <ul>
       <li>Live the life you <strong>DREAM</strong> of!</li>
